update my cover

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                   </div>
                   <div class="text">
                      <h4>I'm ETAH NJENWEI INNOCENT</h4>
-                     <h6>A <span>Web developer</span> and <span>front-end engineer</span> living and working in
+                     <h6>A <span>full stack Web developer</span> <span></span> living and working in
                         DOUALA CAMEROON
                      </h6>
                      <p>I'm passionate about creating and developing clean, unique, elegant products. I specialize in
