--- a/index.html
+++ b/index.html
@@ -94,14 +94,16 @@
                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>HTML5</li>
                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS/SCSS</li>
                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>React JS</li>
-                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Angular.JS</li>
+                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Angular</li>
+                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>vuejs</li>
                            </ul>
                            <ul class="fa-ul">
-                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Version Control</li>
+                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>mysql</li>
                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>UI/UX Design</li>
-                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>CSS/SCSS</li>
-                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Firebase</li>
-                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>Adobe XD</li>
+                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>mongodb</li>
+                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span> nodejs</li>
+                              <li><span class="fa-li"><i class="fas fa-check-square"></i></span>php</li>
+                               <li><span class="fa-li"><i class="fas fa-check-square"></i></span>flutter</li>
                            </ul>
                         </div>
                      </div>
