--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                   try my best to get back to you!</h2>
             </div>
             <div class="button ">
-               <a href=''>Get In Touch</a>
+               <a href='#contact'>Get In Touch</a>
             </div>
          </div>
       </div>
