added new photos

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <div class="about-content">
                <div class="row">
                   <div class="img">
-                     <img src="./me.jpg" alt='me' />
+                     <img src="./etah2.jpg" alt='me' />
                   </div>
                   <div class="text">
                      <h4>I'm ETAH NJENWEI INNOCENT</h4>
@@ -303,7 +303,7 @@
                   </div>
                   <div class="testimonials-img">
                      <div class="test-img">
-                        <img src="./two.jpg" />
+                        <img src="./class.jpg" />
                      </div>
                      <div class="testimonials-text">
                         <h6>ETdev-Group</h6>
